--- a/pages/Dashboard/Dashboard.module.scss
+++ b/pages/Dashboard/Dashboard.module.scss
@@ -82,7 +82,8 @@
 
 .dashboard-calender-picker {
   display: flex;
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
+  height: 3rem;
   justify-content: space-between;
   align-items: center;
 }
@@ -145,15 +146,18 @@
 }
 
 .dashboard-card-title {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 0.8rem;
+  line-height: 0.25rem;
   font-weight: 500;
 }
 
 .dashboard-card-descripton {
+  position: absolute;
+  right: 0;
   width: 1.125rem;
   height: 1.25rem;
-  margin-left: 150px;
+  margin-right: 1rem;
+  // margin-left: 150px;
 
   color: hsl(215.4 16.3% 46.9%);
 }
@@ -165,6 +169,7 @@
 }
 
 .dashboard-card-para {
+  margin: 0;
   font-size: 0.75rem;
   line-height: 1rem;
   color: hsl(215.4 16.3% 46.9%);
@@ -181,13 +186,13 @@
 }
 
 .dashboard-card-column-one {
-  grid-column: span 4 / span 4;
+  grid-column: span 1 / span 1;
 }
 .dashboard-card-colum-description {
   margin: 10px;
 }
 .dashboard-card-column-two {
-  grid-column: span 3 / span 3;
+  grid-column: span 1 / span 1;
 }
 
 .dashboard-card-contents {
