--- a/pages/Dashboard/components/styles/CalendarDateRangePicker.module.scss
+++ b/pages/Dashboard/components/styles/CalendarDateRangePicker.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   gap: 0.5rem;
   border-color: hsl(214.3 31.8% 91.4%);
+  height: 2.5rem;
 }
 
 .range-picker-button {
